platform/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: grafana.devopsbydishen.shop
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - grafana.devopsbydishen.shop
      secretName: grafana-tls
  rules:
    - host: grafana.devopsbydishen.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
